# recipe-nutrition

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  init_data.rs  main.rs  models.rs  nutrition.rs
src/api/: tauri.ts
src/components/: DRIRadarChart.vue  IngredientReplacePanel.vue  NutritionCompareDialog.vue  NutritionLabel.vue
src/router/: index.ts
src/stores/: ingredient.ts  recipe.ts
src/styles/: global.scss
src/types/: index.ts
src/utils/: nutrition.ts
src/views/: Ingredients.vue  RecipeDetail.vue  Recipes.vue  Settings.vue  Templates.vue
